--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,7 +31,7 @@ body {
         height: 100%;
     }
 
-    .logo > img {
+    .logo > a > img {
         height: 75px;
     }
 
@@ -53,7 +53,57 @@ body {
 
 /**** CONTENT ****/
 @media only screen and (min-width: 0px) {
-    #content {
-        
+    .content {
+        background-color: var(--yellow);
+    }
+}
+
+/*** HOME ***/
+@media only screen and (min-width: 0px) {
+    .home-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 50px;
+        padding: 100px;
+    }
+
+    .home-logo-img {
+        width: 600px;
+    }
+
+    .logo-guidance-img {
+        width: 600px;
+    }
+
+    .home-about {
+        background-color: white;
+        max-width: 800px;
+        padding: 40px;
+        border-radius: 20px;
+    }
+
+    .home-title {
+        font-size: 2em;
+        font-weight: 600;
+        margin-bottom: 5px;
+    }
+
+    .home-description {
+        font-size: 1.25em;
+    }
+}
+
+/*** MENU ***/
+@media only screen and (min-width: 0px) {
+    .menu-container {
+
+    }
+}
+
+/*** CONTACT ***/
+@media only screen and (min-width: 0px) {
+    .contact-container {
+
     }
 }
