--- a/src/css/style.css
+++ b/src/css/style.css
@@ -97,7 +97,47 @@ body {
 /*** MENU ***/
 @media only screen and (min-width: 0px) {
     .menu-container {
+        display: flex;
+        flex-direction: column;
+        max-width: 1500px;
+        margin: 0 auto;
+        padding: 50px 100px;
+        gap: 100px;
+    }
 
+    .menu-category-title {
+        background-color: white;
+        font-size: 1.5em;
+        font-weight: 1000;
+        width: fit-content;
+        margin: 0 auto 25px;
+        padding: 10px 30px;
+        border: 3px solid var(--brown);
+        border-radius: 50px;
+    }
+
+    .menu-list {
+        display: flex;
+        gap: 40px;
+    }
+
+    .menu-item {
+        flex: 1;
+        background-color: white;
+        padding: 20px;
+        border: 2px solid var(--brown);
+        border-radius: 20px;
+    }
+
+    .menu-item > img {
+        margin: 0 auto;
+        border-radius: 20px;
+    }
+
+    .menu-item-name {
+        font-size: 2em;
+        font-weight: 600;
+        margin: 15px 0 5px;
     }
 }
 
